GNOME Bugzilla – Bug 711731
screen: Laters are not GSources
Last modified: 2013-11-09 16:46:33 UTC
This warns with the new GLib when we destroy the screen.
Created attachment 259334 [details] [review] screen: Laters are not GSources
Review of attachment 259334 [details] [review]: Good catch.
Attachment 259334 [details] pushed as 25b5ea8 - screen: Laters are not GSources